--- a/contact.html
+++ b/contact.html
@@ -8,18 +8,19 @@
   <body>
     <header>
       <div class="MainRow">
-      <h2>Welcome to the DarkLands</h2>
-      <h1>Darkness Spreads</h1>
+      <h1>Welcome to the DarkLands</h1>
+      <h2>Darkness Spreads</h2>
       <nav>
         <a href="index.html">Home</a>
       <a href="aboutme.html"> About me</a>
        <a href="my-photos.html">My Photos</a>
+       </nav>
      </div>
-     </nav>
+
     </header>
-
-    <h1> Feel Free To Email Me</h1>
-    <h3> team.iphone112@gmail.com </h3>
-
+<footer>
+    <h2> Feel Free To Email Me</h2>
+    <p> team.iphone112@gmail.com </p>
+</footer>
   </body>
 </html>
