--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
   <body>
     <header>
       <div class="MainRow">
-      <h2>Welcome to the DarkLands</h2>
-      <h1>Darkness Spreads</h1>
+      <h1>Welcome to the DarkLands</h1>
+      <h2>Darkness Spreads</h2>
       <nav>
 
       <a href="aboutme.html"> About me</a>
        <a href="contact.html"> Contact</a>
+       </nav>
      </div>
-     </nav>
+
     </header>
       <h3>My name is Anthony Harvey I am a  biggner coder & is just stating to understand everyhting. During my free time i like to play games that are mostly violent but has a good story and I just started in highschool but i enjoy taking pictures with my friends and of nature. I am also a man of few words.</h3>
         <h2>My Photos</h2>
@@ -28,16 +29,15 @@
         <img class="Cousin" src="IMG_0920.jpg" alt="Before Prom Photo"/>
       </div>
      <div class="Youtube">
-     </div>
+
        <h1>My Video</h1>
-       <h5> Here is one video that I've made. Also here is a link to my <a href="https://www.youtube.com/channel/UCSamWmxP6JGu38ihzv5nDVw/videos?view_as=subscriber">channel.</h5>
+       <p> Here is one video that I've made. Also here is a link to my <a href="https://www.youtube.com/channel/UCSamWmxP6JGu38ihzv5nDVw/videos?view_as=subscriber">channel.</p>
        <iframe id="inlineFrameExample"
       title="Inline Frame Example"
       width="1350"
       height="600"
       src="https://www.youtube.com/embed/x_KABhY53b4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>">
   </iframe>
-    <footer>
-</footer>
+   </div>
   </body>
 </html>
