--- a/aboutme.html
+++ b/aboutme.html
@@ -23,9 +23,9 @@
 
     <h3>Who am I</h3>
 
-    <p> I am a of few words. I was bron on November 23,1998. I was born and raised in Phildephia. Growing up I,ve always been souranded by games for 2 reasons. But I've always loved spending my time playing the game and forgeting about the world. I
+    <h3> I am a of few words. I was born on November 23,1998. I was born and raised in Phildephia. Growing up I,ve always been souranded by games for 2 reasons. But I've always loved spending my time playing the game and forgeting about the world. I
         enjoy 3 things in life food, gmaes, and sleep. My dream job is to be a game tester and making or help make my ideal game. A game that has everything that a player can ever want and not trying to drain our players bank accounts and make
-        quailty expansions (DLC).I can go on forever about my ideel games but I just want whoever to know a little about me.</p>
+        quailty expansions (DLC).I can go on forever about my ideel games but I just want whoever to know a little about me.</h3>
 
 </body>
 
