--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>About Me</title>
+  <title> Contact Me </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
