--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <link href="styles.css" rel="stylesheet" type="text/css">
   <meta charset="utf-8">
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Land Of Darkness</title>
 </head>
@@ -35,8 +34,7 @@
         <h1>My Video</h1>
         <h5> Here is one video that I've made. Also here is a link to my <a href="https://www.youtube.com/channel/UCSamWmxP6JGu38ihzv5nDVw/videos?view_as=subscriber">channel.</h5>
         <iframe id="inlineFrameExample" title="Inline Frame Example" width="1350" height="600" src="https://www.youtube.com/embed/x_KABhY53b4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>">
-        </iframe>
+            allowfullscreen></iframe>
     </section>
 
 
